--- a/localization/english/ttb_expansion_l_english.yml
+++ b/localization/english/ttb_expansion_l_english.yml
@@ -122,16 +122,19 @@
  swedish_nordic_monarchy: "The House of Bernadotte"
  swedish_nordic_monarchy_reason: "#yellow The House of Bernadotte#!, founded by the former French marshal\n#yellow Karl XIV Johan#!, is a relatively new dynasty in #yellow Sweden#!.\nWhile the legitimacy of royal houses is increasingly called into question by republican and nationalist passions across Europe, the #yellow Bernadottes#! have defied this trend, earning overwhelming popular support among the Swedish people.\n\nTo endure, the dynasty must cement its place not through ancient right, but through its continued ability to appeal to a broad range of subjects and adapt to the changing political landscape.\n\nOnly then can the #yellow Monarchy#! feel at ease and be certain of it’s survival for the decades to come."
  swedish_nordic_monarchy_goal: "The House of Bernadotte maintains its widespread support for 30 years, ensuring the monarchy's future."
- crowns_control_progress_bar: "The Crown Control on The Government"
+ crowns_control_progress_bar: "The Crown's Influence"
  crowns_control_progress_bar_desc: ""
  ttb_royalist_absolutist_movements: "Royalist and Absolutism movements"
  ttb_radical_movements: "Radical movements"
- ttb_anti_monarchist_in_government: "Anti-Monarchists in government"
- ttb_monarchist_in_government: "Monarchists in government"
- ttb_add_5_progress_crown_control: "Advances #bold Crown Control#! by #p 5#!"
- ttb_remove_5_progress_crown_control: "Regresses #bold Crown Control#! by #n 5#!"
- ttb_add_10_progress_crown_control: "Advances #bold Crown Control#! by #p 10#!"
- ttb_remove_10_progress_crown_control: "Regresses #bold Crown Control#! by #n 10#!"
+ ttb_anti_monarchist_in_government: "Republican in government"
+ ttb_monarchist_in_government: "Monarchist in government"
+ ttb_drawn_to_status_quo: "Neutral draw to Status qou"
+ ttb_add_25_progress_crown_control: "Advances #bold Crown Influence#! by #p 25#!"
+ ttb_remove_25_progress_crown_control: "Regresses #bold Crown Influence#! by #n 25#!"
+ ttb_add_50_progress_crown_control: "Advances #bold Crown Influence#! by #p 50#!"
+ ttb_remove_50_progress_crown_control: "Regresses #bold Crown Influence#! by #n 50#!"
+ ttb_add_60_progress_crown_control: "Advances #bold Crown Influence#! by #p 60#!"
+ ttb_remove_60_progress_crown_control: "Regresses #bold Crown Influence#! by #n 60#!"
 
  nor_the_great_transformation: "The Great Transformation"
  nor_the_great_transformation_reason: "Norway has taken the first steps towards industrialising it's industries, all it got to do now is to become more reliant on itself to become a competetive force in the Western world."
@@ -159,37 +162,38 @@
  integrate_finland_into_scandinavia: "Integrate Finland Into Scandinavia"
  integrate_finland_into_scandinavia_desc: "Finland has held close relations to Scandinavia in the past and we need to properly integrate them into our great nation again."
  # Names
- Axel: "Axel"
- Adlercreutz: "Adlercreutz"
+ #Goran_Fredrik: "Göran Fredrik"
+ #Axel: "Axel"
+ #Adlercreutz: "Adlercreutz"
  Gerard_De_Geer: "Gerard De Geer"
- Anna: "Anna"
+ #Anna: "Anna"
  Lindhagen: "Lindhagen"
- Severin: "Severin"
- Lovenskiold: "Lovenskiold"
- Frederik: "Frederik"
+ #Severin: "Severin"
+ #Lovenskiold: "Lovenskiold"
+ #Frederik: "Frederik"
  Due: "Due"
- Sverdrup: "Sverdrup"
+ #Sverdrup: "Sverdrup"
  Soren: "Soren"
  Jaabaek: "Jaabaek"
- Thrane: "Thrane"
+ #Thrane: "Thrane"
  Christoffer: "Christoffer"
- Poul: "Poul"
+ #Poul: "Poul"
  Stemann: "Stemann"
  Grundtvig: "Grundtvig"
- Balthazar: "Balthazar"
+ #Balthazar: "Balthazar"
  Christensen: "Christensen"
  Bronnum: "Bronnum"
  Yrjo: "Yrjö"
  Koskinen: "Koskinen"
- Snellman: "Snellman"
+ #Snellman: "Snellman"
  Cygnaeus: "Cygnaeus"
- André_Oscar: "André Oscar"
- Wallenberg: "Wallenberg"
- Erik_Gustaf: "Erik Gustaf"
+ Andre_Oscar: "André Oscar"
+ #Wallenberg: "Wallenberg"
+ #Erik_Gustaf: "Erik Gustaf"
  Geijer: "Geijer"
- Hjalmar: "Hjalmar"
+ #Hjalmar: "Hjalmar"
  Branting: "Branting"
- Fredrik: "Fredrik"
+ #Fredrik: "Fredrik"
  Meyn: "Meyn"
  Peder_Christian: "Peder Christian"
  Holst: "Holst"
@@ -199,36 +203,42 @@
  Krag: "Krag"
  Jacob_Maximillian_Gran: "Jacob Maximillian Gran"
  Paaske: "Paaske"
- Johan_Jørgen: "Johan Jørgen"
- Schwartz: "Schwartz"
- Haakon: "Haakon"
+ Johan_Jorgen: "Johan Jørgen"
+ #Schwartz: "Schwartz"
+ #Haakon: "Haakon"
  Finne: "Finne"
  Jacob_Christian: "Jacob Christian"
- Jacobsen: "Jacobsen"
+ #Jacobsen: "Jacobsen"
  Carl_Christian_Hillman: "Carl Christian Hillman"
- Jacobsen: "Jacobsen"
- Goran_Fredrik: Göran Fredrik
+ #Jacobsen: "Jacobsen"
+ Goran_Fredrik: "Göran Fredrik"
  Goransson: "Göransson"
- Erik_Gustaf: "Erik Gustaf"
+ #Erik_Gustaf: "Erik Gustaf"
  Larson: "Larson"
  Assar_Thorvald_Nathanael: "Assar Thorvald Nathanael"
  Gabrielsson: "Gabrielsson"
- Daniel: "Daniel"
- Fraser: "Fraser"
+ #Daniel: "Daniel"
+ #Fraser: "Fraser"
  Otto_Edvard: "Otto Edvard"
  Carlsund: "Carlsund"
  Johan_Carl: "Johan Carl"
- Kempe: "Kempe"
+ #Kempe: "Kempe"
  Frans_Kristopher: "Frans Kristian"
- #  Kempe: "Kempe"
+ # Kempe: "Kempe"
+ #Pehr: "Pehr"
+ Lagerhjelm: "Lagerhjelm"
+ Pehr_Erland: "Pehr Erland"
+ # Lagerhjelm: "Lagerhjelm"
+ Nikolai_Frederik_Severin: "Nikolai Frederik Severin"
 
  # Companies
  ttb_company_Kongsberg_vapenfabrikk: "Kongsberg Våpenfabrikk"
  ttb_company_Carlsberg_beer: "Carlsberg"
  ttb_company_volvo_auto: "Volvo"
  ttb_company_sandvikens: "Sandvikens Jernverks AB"
- ttb_company_motala_verkstad: "Motala Verkstad"
- ttb_company_mo_och_domsjö_ab: "Mo och Domsjö AB"
+ ttb_company_motala_verkstad: "AB Motala Verkstad"
+ ttb_company_mo_och_domsjo_ab: "Mo och Domsjö AB"
+ ttb_company_bofors: "AB Bofors"
 
  # Prestige goods
  prestige_krag_jorgensen: "Krag Jorgensen"
@@ -259,7 +269,7 @@
  sweden_no_compromise_for_army: "No Compromise About New Army Policies"
  sweden_snilleindustri: "Swedish Engineering Focus"
  sweden_stockholm: "Stockholm"
- sweden_sundsvall_fire: "Sundsvalls Rebirth"
+ sweden_sundsvall_fire_modi: "Sundsvalls Rebirth"
  sweden_matchstick_boom: "Swedish Matchstick Supremacy"
  sweden_stockholm_exhibition: "Stockholm Exhibition"
  sweden_lasare_movement: "Spiritual Awakening"
