--- a/localization/english/ttb_expansion_l_english.yml
+++ b/localization/english/ttb_expansion_l_english.yml
@@ -120,8 +120,7 @@
  swedish_the_forestry_act: "The Forestry Act"
  swedish_the_forestry_act_reason: "For generations, the #light_green forest#! has been the very heart of the #yellow Swedish soul#!, a source of both livelihood and deep-seated identity. But the great #blue sawmill industry#! and the #blue charcoal kilns#! of #yellow Bergslagen#! have taken a heavy toll on this ancient relationship. The ceaseless demand for timber has left our once endless bounty looking thin and worn. Yet, a new idea is taking root. A #white 'conservation movement'#! is stirring in the Parliament, arguing that our forests are a finite inheritance to be managed, not simply exploited.\n\nThe debates are often heated, but the direction seems clear. The new #gold Forestry Act (Skogsvårdslagen)#!, which requires replanting and oversight from forestry inspectors. There are also more ambitious calls to preserve entire landscapes, creating vast #gold national parks#! for #blue science#! and #blue tourism#!. This is a moment of truth for our nation commitment to safeguarding the wild beauty that has long defined us."
  swedish_nordic_monarchy: "The House of Bernadotte"
- swedish_nordic_monarchy_reason: "#yellow The House of Bernadotte#!, founded by the former French marshal\n#yellow Karl XIV Johan#!, is a relatively new dynasty in #yellow Sweden#!.\nWhile the legitimacy of royal houses is increasingly called into question by republican and nationalist passions across Europe, the #yellow Bernadottes#! have defied this trend, earning overwhelming popular support among the Swedish people.\n\nTo endure, the dynasty must cement its place not through ancient right, but through its continued ability to appeal to a broad range of subjects and adapt to the changing political landscape.\n\nOnly then can the #yellow Monarchy#! feel at ease and be certain of it’s survival for the decades to come."
- swedish_nordic_monarchy_goal: "The House of Bernadotte maintains its widespread support for 30 years, ensuring the monarchy's future."
+ swedish_nordic_monarchy_reason: "The #yellow House of Bernadotte#!, founded by the former French marshal #yellow Karl XIV Johan#!, is a relatively new dynasty in [ROOT.GetCountry.GetName]. To endure, the dynasty must cement its place not through ancient right, but through its ability to navigate the complex challenges of the modern era.\n\nChief among these is the delicate personal union with #yellow Norway#!. Forged after the Napoleonic Wars with the treaty of Kiel, the union binds our two realms under a common monarch, yet the Norwegian parlament 'Storting' remains a constant wellspring of nationalist sentiment, challenging our authority at every turn.\n\nAt the same time, republican passions rise across Europe, calling the very legitimacy of monarchy into question.\n\nThe survival of the #yellow Bernadotte#! crown depends on skillfully managing the Norwegian union to project strength and prestige, while simultaneously earning the broad support of the Swedish people. Successfully managing thees issues will ensure the #yellow Monarchy#! does survive for the decades to come."
  crowns_control_progress_bar: "The Crown's Influence"
  crowns_control_progress_bar_desc: ""
  ttb_royalist_absolutist_movements: "Royalist and Absolutism movements"
@@ -135,6 +134,10 @@
  ttb_remove_50_progress_crown_control: "Regresses #bold Crown Influence#! by #n 50#!"
  ttb_add_60_progress_crown_control: "Advances #bold Crown Influence#! by #p 60#!"
  ttb_remove_60_progress_crown_control: "Regresses #bold Crown Influence#! by #n 60#!"
+
+ #swedish_union_crisis: "The Union in Crisis"
+ #swedish_union_crisis_reason: "The political disagreements with Norway have reached a fever pitch. Driven by their growing merchant fleet and a fervent nationalism, the Norwegian Storting relentlessly pushes for symbols of sovereignty that would render the union a mere formality. King [ROOT.GetCountry.GetRuler.GetFirstName]'s royal veto is the only tool holding their ambitions in check, but each use further inflames their desire for separation. If a compromise cannot be reached, this constitutional struggle will lead to the dissolution of the union, either by the pen or by the sword."
+ #swedish_union_crisis_goal: "Resolve the constitutional crisis with Norway before it leads to war or international humiliation."
 
  nor_the_great_transformation: "The Great Transformation"
  nor_the_great_transformation_reason: "Norway has taken the first steps towards industrialising it's industries, all it got to do now is to become more reliant on itself to become a competetive force in the Western world."
@@ -298,6 +301,8 @@
  sweden_rally_around_the_king: "Rally Around The King"
  sweden_army_investment: "Army Training Investments"
  sweden_strong_independent_farmer_culture: "Strong independent Farmer Culture"
+ sweden_caved_to_norway: "Caved to Norway"
+
 
  norway_abolishment_of_new_aristocrats: "Abolished Creation of New Aristocrat Titles"
  norway_det_store_hamskiftet: "Det store hamskiftet"
@@ -307,6 +312,9 @@
  norway_formmanskapsdistrikt: "Creation of Formannskapsdistrikt"
  norway_formmanskapsdistrikt_nation: "Formannskapsdistrikt"
  norway_the_great_merchant_navy: "The Great Merchant Marine"
+ norway_military_government_imposed: "Military Government Imposed"
+ norway_loyal_government_imposed: "Loyal Government Imposed"
+
  
  finland_our_language_outside_courts: "Our Language Outside Courts"
  finland_our_language_outside_courts_desc: "The Finnish language isn't the language of the ruling elite, it is treated as the language of the peasantry. This is a blow to our national identity in many ways."
