fixed some event videos

--- a/localization/english/ttb_events_l_english.yml
+++ b/localization/english/ttb_events_l_english.yml
@@ -165,6 +165,7 @@
  sweden_flavor.21.d: "As the timber industry booms in #light_green Norrland#!, a powerful new class of industrialist, the #gold 'Träpatroner' (Timber Barons)#!, has risen to prominence. These magnates, often acquiring vast tracts of forest and establishing entire company towns around their sawmills, wield immense influence over the economy and lives of thousands. Their efficient, often authoritarian, control drives unparalleled production and wealth, but their dominance also raises questions about labor conditions, local autonomy, and the concentration of power in the hands of a few formidable individuals."
  sweden_flavor.21.f: "The smokestacks of their mills now cast long shadows over the northern landscape, symbols of their undeniable power."
  sweden_flavor.21.a: "Acknowledge Their Indispensable Role!"
+ sweden_flavor.21.b: "Try to Limit There Influence"
 
  sweden_flavor.22.t: "The Sober Call: A Nation's Conscience Stirred"
  sweden_flavor.22.d: "From the pulpits to the public squares, a powerful movement is sweeping across #yellow Sweden#!: the call for #yellow temperance#!. Advocates decry the devastating effects of alcohol on families, productivity, and moral fiber, urging for strict regulation or even prohibition. This moral crusade is particularly strong among the #light_green rural populace#! and the devout, but faces opposition from those who see it as an infringement on personal liberties or a threat to state revenue. The nation faces a choice between social reform and individual freedom."
