--- a/localization/english/ttb_expansion_l_english.yml
+++ b/localization/english/ttb_expansion_l_english.yml
@@ -312,7 +312,7 @@
  norway_formmanskapsdistrikt: "Creation of Formannskapsdistrikt"
  norway_formmanskapsdistrikt_nation: "Formannskapsdistrikt"
  norway_the_great_merchant_navy: "The Great Merchant Marine"
- norway_military_government_imposed: "Military Government Imposed"
+ norway_lost_the_union_crises: "Lost the Union Crises"
  norway_loyal_government_imposed: "Loyal Government Imposed"
 
  
